# keyvault2kube

./: Dockerfile  LICENSE  Makefile  Pipfile  README.md  deployment.yaml  examply.py  pyproject.toml
.github/workflows/: ci.yml
deploy/: azureidentity.yaml  clusterrole.yaml  clusterrolebinding.yaml  deploy.yaml  kustomization.yaml  serviceaccount.yaml
keyvault2kube/: keyvault.py  kube.py  secret.py  server.py
