[tool.poetry]
name = "keyvault2kube"
version = "2.0.0"
description = "Copies secrets from Azure KeyVault to Kubernetes"
authors = ["Terry Cain <terry@terrys-home.co.uk>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
azure-keyvault-secrets = "^4.1.0"
azure-identity = "^1.3.1"
kubernetes = "^11.0.0"
pylogrus = "^0.4.0"
pyyaml = "^5.3.1"
Jinja2 = "^2.11.3"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
isort = "^4.3.21"

[tool.isort]
line_length = 120
skip = ".git"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
