[tool.poetry]
name = "keyvault2kube"
version = "2.0.0"
description = "Copies secrets from Azure KeyVault to Kubernetes"
authors = ["Terry Cain <terry@terrys-home.co.uk>", "Chris Pressland <mail@cpressland.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"
azure-keyvault-secrets = "^4.3.0"
azure-identity = "^1.7.1"
kubernetes = "^21.7.0"
pylogrus = "^0.4.0"
PyYAML = "^6.0"
Jinja2 = "^3.0.3"

[tool.poetry.group.dev.dependencies]
black = "^21.12-beta.0"
isort = "^5.10.1"

[tool.isort]
line_length = 120
skip = ".git"

[tool.black]
line-length = 120
target-version = ['py38']

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
